load("@rules_go//go:def.bzl", "go_test")
load("//test/rules:rules.bzl", "zs_payload")

zs_payload(
    name = "testdata",
    srcs = ["data.py"],
    out = "testdata.bin",
    deps = ["//testdata/reference_modules:py_testobject"],
)

go_test(
    name = "reference_test",
    srcs = ["reference_test.go"],
    data = [
        ":testdata",
    ],
    env = {
        "TESTDATA_BIN": "$(rootpath :testdata)",
    },
    deps = [
        "//:go-zserio",
        "//testdata/reference_modules:go_core_instantiations",
        "//testdata/reference_modules:go_core_types",
        "//testdata/reference_modules:go_testobject",
        "//ztype",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@rules_go//go/tools/bazel",
    ],
)
