load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "d.go",
        "generate.go",
        "root.go",
    ],
    importpath = "github.com/woven-planet/go-zserio/zserio/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/generator",
        "//internal/model",
        "@com_github_spf13_cobra//:cobra",
    ],
)
