load("@io_bazel_rules_go//go:def.bzl", "go_test")
load("//:rules.bzl", "go_zserio_library")
load("//test/rules:rules.bzl", "py_zserio_library", "zs_payload")

go_zserio_library(
    name = "go_lib",
    srcs = [":schema.zs"],
    pkg = "packed_compound_array.schema",
    rootpackage = "gen/github.com/woven-planet/go-zserio/testdata",
)

py_zserio_library(
    name = "py_lib",
    outs = [
        "packed_compound_array/schema/__init__.py",
        "packed_compound_array/schema/api.py",
        "packed_compound_array/schema/packable_structure.py",
        "packed_compound_array/schema/packed_array_of_compounds.py",
    ],
    prefix = "testdata",
    proto = ":schema.zs",
)

zs_payload(
    name = "testdata",
    srcs = ["data.py"],
    out = "testdata.bin",
    deps = [":py_lib"],
)

go_test(
    name = "packed_compound_array",
    srcs = ["test.go"],
    data = [
        ":testdata",
    ],
    env = {
        "TESTDATA_BIN": "$(rootpath :testdata)",
    },
    deps = [
        ":go_lib",
        "//:go-zserio",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
    ],
)
